--- a/XSS_Detection.ipynb
+++ b/XSS_Detection.ipynb
@@ -1,4 +1,27 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "74a9d8d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from nltk.corpus import stopwords\n",
+    "import pickle"
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": 2,
